--- a/WellsFargo/Base.lproj/Main.storyboard
+++ b/WellsFargo/Base.lproj/Main.storyboard
@@ -292,14 +292,14 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarTimeCell" id="osr-RG-HQR">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarTimeCell" id="osr-RG-HQR" customClass="CalendarTimeCell" customModule="WellsFargo" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Q5g-yF-NG4">
                                             <rect key="frame" x="0.0" y="0.0" width="100" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZsJ-T1-Tkp">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZsJ-T1-Tkp">
                                                     <rect key="frame" x="0.0" y="0.0" width="100" height="50"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
@@ -314,6 +314,9 @@
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="100" height="50"/>
+                                        <connections>
+                                            <outlet property="timeLabel" destination="ZsJ-T1-Tkp" id="Apl-Pd-Ast"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -372,7 +375,7 @@
                                         <size key="customSize" width="100" height="150"/>
                                         <connections>
                                             <outlet property="dayLabel" destination="40o-e6-ero" id="CwZ-FD-OoQ"/>
-                                            <outlet property="monthLabel" destination="g3J-PM-rl2" id="31q-rN-3Wn"/>
+                                            <outlet property="dayOfTheWeekLabel" destination="g3J-PM-rl2" id="ErK-2f-LSf"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
